Fix spillover of notebooks and tags index when expanding note detail

--- a/app/assets/stylesheets/api/notebooks.scss
+++ b/app/assets/stylesheets/api/notebooks.scss
@@ -1,6 +1,6 @@
 .notebooksPanel {
   position: absolute;
-  left: -500px;
+  left: -1000px;
   right: 0;
   width: 456px;
   height: 100%;
