--- a/app/assets/stylesheets/api/tags.scss
+++ b/app/assets/stylesheets/api/tags.scss
@@ -1,6 +1,6 @@
 .tagsPanel {
   position: absolute;
-  left: -500px;
+  left: -1000px;
   right: 0;
   width: 456px;
   height: 100%;
